feat: add morning report section

--- a/index.html
+++ b/index.html
@@ -955,10 +955,24 @@
                 <div class="meta">📁 服务</div>
                 <p>实时提供 AI 工作状态的 REST API</p>
             </div>
-            <div class="card">
+            <div class="card" style="border-left: 3px solid #3fb950;">
                 <h3>📰 科技新闻早报</h3>
-                <div class="meta">📁 自动化</div>
-                <p>每天 9 点自动抓取 Hacker News + GitHub Trending</p>
+                <div class="meta">📁 自动化 | 每天 9:00 自动推送</div>
+                <p>自动抓取并汇总当日科技资讯，发送到 Telegram</p>
+                <div class="tags" style="margin-top: 0.75rem;">
+                    <span class="tag">Hacker News</span>
+                    <span class="tag">36氪</span>
+                    <span class="tag">Dev.to</span>
+                    <span class="tag">GitHub</span>
+                </div>
+                <div style="margin-top: 1rem; padding: 0.75rem; background: var(--bg); border-radius: 6px;">
+                    <p style="font-size: 0.85rem; color: var(--text-muted); margin-bottom: 0.5rem;">📌 今日早报精选</p>
+                    <ul style="font-size: 0.8rem; margin: 0; padding-left: 1rem;">
+                        <li>Anthropic Dario Amodei 关于国防部讨论的声明 ⭐695</li>
+                        <li>玛莎拉蒂母公司 Stellantis 全年净亏损 1800 亿元</li>
+                        <li>Cloudflare vinext - Vite 实现 Next.js API (⭐3927)</li>
+                    </ul>
+                </div>
             </div>
         </section>
         
