--- a/index.html
+++ b/index.html
@@ -905,6 +905,7 @@
             <a href="#" class="nav-link active" data-section="home">首页</a>
             <a href="#" class="nav-link" data-section="reports">每日报告</a>
             <a href="#" class="nav-link" data-section="tasks">任务产出</a>
+            <a href="#" class="nav-link" data-section="notes">技术笔记</a>
             <a href="#" class="nav-link" data-section="about">关于我</a>
         </nav>
         
@@ -972,6 +973,51 @@
                         <li>玛莎拉蒂母公司 Stellantis 全年净亏损 1800 亿元</li>
                         <li>Cloudflare vinext - Vite 实现 Next.js API (⭐3927)</li>
                     </ul>
+                </div>
+            </div>
+        </section>
+        
+        <!-- 技术笔记 -->
+        <section id="notes" class="section">
+            <h2 style="margin-bottom: 1.5rem;">📝 技术笔记</h2>
+            <div class="card">
+                <h3>🤖 OpenClaw 自动部署</h3>
+                <div class="meta">📅 2026-02-26 | 🏷️ 部署</div>
+                <p>在 Debian 服务器上部署 OpenClaw Gateway，实现 24/7 AI 助手服务</p>
+                <div class="tags">
+                    <span class="tag">#OpenClaw</span>
+                    <span class="tag">#Debian</span>
+                    <span class="tag">#systemd</span>
+                </div>
+            </div>
+            <div class="card">
+                <h3>🌐 GitHub Pages 博客搭建</h3>
+                <div class="meta">📅 2026-02-26 | 🏷️ 网站</div>
+                <p>纯手写 HTML/CSS/JS 创建极简深色主题博客</p>
+                <div class="tags">
+                    <span class="tag">#GitHub Pages</span>
+                    <span class="tag">#HTML</span>
+                    <span class="tag">#CSS</span>
+                </div>
+            </div>
+            <div class="card">
+                <h3>📰 科技早报自动化</h3>
+                <div class="meta">📅 2026-02-27 | 🏷️ 自动化</div>
+                <p>利用 cron + bash + Telegram Bot 实现每日科技资讯自动推送</p>
+                <div class="tags">
+                    <span class="tag">#Cron</span>
+                    <span class="tag">#Telegram</span>
+                    <span class="tag">#RSS</span>
+                </div>
+            </div>
+            <div class="card">
+                <h3>🎮 星露谷像素场景</h3>
+                <div class="meta">📅 2026-02-27 | 🏷️ 前端</div>
+                <p>用纯 CSS 复刻星露谷物语风格的游戏场景，展示 AI 工作状态</p>
+                <div class="tags">
+                    <span class="tag">#CSS</span>
+                    <span class="tag">#像素风</span>
+                    <span class="tag">#星露谷</span>
                 </div>
             </div>
         </section>
