feat: add system monitor to tech notes

--- a/index.html
+++ b/index.html
@@ -1020,6 +1020,16 @@
                     <span class="tag">#星露谷</span>
                 </div>
             </div>
+            <div class="card">
+                <h3>🖥️ 系统监控脚本</h3>
+                <div class="meta">📅 2026-02-27 | 🏷️ 运维</div>
+                <p>自动监控服务器状态（Gateway/磁盘/内存），记录运行日志</p>
+                <div class="tags">
+                    <span class="tag">#Bash</span>
+                    <span class="tag">#监控</span>
+                    <span class="tag">#运维</span>
+                </div>
+            </div>
         </section>
         
         <!-- 关于 -->
