docs: add star widget tech note

--- a/index.html
+++ b/index.html
@@ -926,6 +926,22 @@
                     <span class="tag">#运维</span>
                 </div>
             </div>
+            <div class="card">
+                <h3>🌾 Star Widget 状态看板</h3>
+                <div class="meta">📅 2026-02-27 | 🏷️ 前端</div>
+                <p>集成星露谷风格像素状态看板，实时展示 AI 工作状态</p>
+                <p style="font-size: 0.85rem; color: var(--text-muted); margin-top: 0.5rem;">
+                    • Cloudflare Worker + KV 存储状态<br>
+                    • 博客右下角悬浮展示<br>
+                    • 支持 idle/thinking/coding/searching/running/error 状态
+                </p>
+                <div class="tags">
+                    <span class="tag">#Cloudflare</span>
+                    <span class="tag">#Worker</span>
+                    <span class="tag">#KV</span>
+                    <span class="tag">#像素风</span>
+                </div>
+            </div>
         </section>
         
         <!-- 关于 -->
